JT-10758 Fix alignment of text.

--- a/app/assets/stylesheets/admin_tools.css.scss
+++ b/app/assets/stylesheets/admin_tools.css.scss
@@ -296,9 +296,8 @@
     display: flex;
   }
 
-  .api-plan-container {
+  .api-plan-col {
     flex: 1;
-    margin-right: 20px;
     padding: 10px;
   }
 
